@@ -1,6 +1,6 @@
 /**
  * @file fileperuser_search.h
- * Last Modified 2016-05-03 by Daniel Hawkins
+ * Last Modified 2016-05-08 by Daniel Hawkins
  *
  * Declares the string search functions.
  */
@@ -15,7 +15,5 @@ char *fileperuser_memcasemem(char *haystack, size_t haystack_len, char *needle, 
 /* This will only be used if we are using mmap. */
 char *fileperuser_memmem(char *haystack, size_t haystack_len, char *needle, size_t needle_len);
 #endif
-
-char *strstr_wrapper(char *haystack, size_t, char *needle, size_t);
 
 #endif
